<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">QQ</string>


    <string name="remember_name">记住密码</string>
    <string name="login">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="register">注册</string>
    <string name="enter_account">请输入账号</string>
    <string name="enter_name">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_password_again">请再次输入密码</string>

    <string name="welcome">  这个app提供了聊天和朋友圈共享功能，
        让你可以与朋友们保持联系，并分享你的生活。让你的聊天体验更加丰富。
        此外，它还可以帮助你结交新朋友，扩大你的社交圈子，让你的生活更加充实和有趣。点击任意地方继续</string>

    <string name="message">消息</string>
    <string name="enter_message">输入消息</string>
    <string name="send">发送</string>

    <string name="contacts">联系人</string>
    <string name="search_add">添加</string>
    <string name="add_friend">添加好友</string>
    <string name="search">查询</string>

    <string name="space">空间</string>
    <string name="add_space_node">写下你的心情并分享吧！！！</string>
    <string name="add_facebook">添加动态</string>

    <string name="home">主页</string>
    <string name="add_friends">添加朋友组</string>
</resources>