<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wfd.qq.MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg1"
        tools:ignore="MissingConstraints" />
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp">
<!--        账号-->
        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_account"
            android:textSize="16sp"/>
<!--        用户名-->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:hint="@string/enter_name"
            android:textSize="16sp"/>

<!--        密码-->
        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_password"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_password_again"
            android:textSize="16sp"/>
<!--        注册-->
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>